fixtures/invalid/undeclared-consumer/src/consumer/public.ts
import { producerValue } from "../producer/public";
export const consumerValue = producerValue;
